--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: generate pacman game
 
 on:
-  schedule: # Run automatically every 24 hours
+  schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch: # Allows manual triggering
-  push: # Runs on every push to the main branch
+  workflow_dispatch:
+  push:
     branches:
       - main
 
@@ -14,16 +14,15 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    env:                                   # ✅ put it here
+      NODE_OPTIONS: --max-old-space-size=6144
 
     steps:
       - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
-        env:
-          NODE_OPTIONS: --max-old-space-size=4096
 
-      # Push the generated SVG to the output branch
       - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
